--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ buildscript {
         classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.6.2"
         classpath "me.champeau.gradle:jmh-gradle-plugin:0.4.5"
 //        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.6.0"
-       classpath "com.github.jengelman.gradle.plugins:shadow:2.0.2"
+        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.2"
 //        classpath "de.schauderhaft.degraph:degraph-check:0.1.4"
 //        classpath "org.asciidoctor:asciidoctor-gradle-plugin:1.5.7"
 //        classpath "org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.16"
@@ -211,91 +211,57 @@ allprojects { subProject ->
 }
 
 
+evaluationDependsOnChildren()
+task aggregateJavadocs(type: Javadoc) {
 
-    task aggregateJavadocs(type: Javadoc) {
+    group = "Documentation"
+    description = "Generates aggregated Javadocs"
+    title = Character.toUpperCase(project.name.charAt(0)).toString() + project.name.substring(1) + " ${version} API"
 
-
-        group = "Documentation"
-        description = "Generates aggregated Javadocs"
-        title = "JUnit ${version} API"
-
-        setDependsOn subprojects.collect { it.tasks.getByName("jar") }
-
-        // Use external javadoc.options to inject unsupported options, like:
-        //   options.addStringOption('-html5')
-        // options.optionFiles(rootProject.file("src/javadoc/javadoc.options"))
-
-        options.memberLevel = JavadocMemberLevel.PROTECTED
-        options.author = true
-        options.header = rootProject.description
-        options.use = true
-        options.splitIndex = true
-        options.addStringOption('Xdoclint:none', '-quiet')
-        options.addMultilineStringsOption('tag').setValue(['apiNote:a:API Note:', 'implSpec:a:Implementation Requirements:', 'implNote:a:Implementation Note:'])
-        options.encoding = 'UTF-8'
-        options.jFlags '-Xmx1g'
-        options.links(
-
-                'https://docs.oracle.com/javase/8/docs/api/'
-
-        )
-
-        //options.stylesheetFile rootProject.file("src/javadoc/stylesheet.css")
-
-        options
-
-                .group("Jupiter", ["org.softcake.cucumber.actors.*"])
-
-                .group("Vintage", ["org.softcake.cucumber.fairy.*"])
-
-        //setSource subprojects.collect { it.sourceSets.main.allJava }
-
-
-        maxMemory = "1024m"
-        destinationDir = new File(buildDir, "docs/javadoc")
-
-        // Remove Kotlin classes from classpath due to "bad" class file
-
-        // see https://bugs.openjdk.java.net/browse/JDK-8187422
-
-
-
-        classpath = files(publishedModules.collect { it.sourceSets.main.compileClasspath })
-        doFirst {
-//            options.addStringOption('-module-path', 'org.softcake.cucumber.actors')
-
+    publishedModules.each { proj ->
+        proj.tasks.create("copyDocs", Copy) {
+            from 'src/main/java'
+            into "$rootProject.buildDir/docscr/${proj.javaModule.name}"
         }
-//        afterEvaluate {
-//            subprojects.each { proj ->
-//                println(proj.ext.mod)
-//                options.addStringOption('--add-modules', 'org.softcake.cucumber.actors')
-//
-//
-//
-//            }
-//        }
-
-
-
-            subprojects.each { proj ->
-                proj.tasks.withType(Javadoc).each { javadocTask ->
-                    source += javadocTask.source
-                    classpath += javadocTask.classpath
-                    excludes += ["module-info.java"]
-                    includes += javadocTask.includes
-                    //inputs.properties.put(javadocTask.inputs.)
-                    //inputs.properties += javadocTask.inputs.property
-//                    doFirst {
-//                        println(javadocTask.classpath.asPath)
-//                        options.addStringOption('-module-path', javadocTask.classpath.asPath)
-//
-//                    }
-                   // inputs.property("moduleName", javaModule.name)
-
-
-                }
-            }
-
-
-
     }
+
+    setDependsOn subprojects.collect { it.tasks.getByName("jar") }
+    setDependsOn subprojects.collect { it.tasks.getByName("copyDocs") }
+
+    options.addStringOption('-html5')
+    options.memberLevel = JavadocMemberLevel.PROTECTED
+    options.author = true
+    options.header = rootProject.description
+    options.use = true
+    options.splitIndex = true
+    options.addStringOption('Xdoclint:none', '-quiet')
+    options.addMultilineStringsOption('tag').setValue(['apiNote:a:API Note:', 'implSpec:a:Implementation Requirements:', 'implNote:a:Implementation Note:'])
+    options.encoding = 'UTF-8'
+    options.jFlags '-Xmx1g'
+    options.links(
+            'https://docs.oracle.com/javase/9/docs/api/'
+    )
+
+    setSource file("$buildDir/docscr")
+
+    maxMemory = "1024m"
+    destinationDir = new File(buildDir, "docs/javadoc")
+
+    classpath = files(publishedModules.collect { it.sourceSets.main.compileClasspath })
+
+    //bad workaround for java 9 modules
+   // excludes += ["module-info.java"]
+    options.addStringOption('-module-source-path', "$rootProject.buildDir/docscr/")
+    options.addStringOption( '-module-path', classpath.asPath)
+
+
+    def moduleNames = ""
+
+    publishedModules.each { proj ->
+        moduleNames += proj.javaModule.name + ","
+    }
+    moduleNames = moduleNames.subSequence(0, moduleNames.length() - 1)
+    options.addStringOption('-module', moduleNames)
+
+
+}
