--- a/gradle/publishing.gradle
+++ b/gradle/publishing.gradle
@@ -15,7 +15,7 @@
  */
 
 afterEvaluate {
-  //  assert description: "Project $project.path is published, must have a description"
+  assert description: "Project $project.path is published, must have a description"
 }
 
 apply plugin: 'maven-publish'
@@ -30,8 +30,8 @@ publishing {
         }
     }
 }
-//tasks.remove(uploadArchives)
-//uploadArchives.enabled = false
+tasks.remove(uploadArchives)
+uploadArchives.enabled = false
 pom {
     name "${project.group}:${project.name}"
     description "Module \"${project.name}\" of softcake ${rootProject.name}."
@@ -50,12 +50,15 @@ pom {
 }
 javadoc {
     inputs.property("moduleName", javaModule.name)
+
     doFirst {
-        options.addStringOption('-module-path', classpath.asPath)
+
+       options.addStringOption('-module-path', classpath.asPath)
+
     }
 
     afterEvaluate {
-//        options.header = "${project.description} of ${rootProject.description}."
+    options.header = "${project.description} of ${rootProject.description}."
     }
     options.memberLevel = JavadocMemberLevel.PROTECTED
     options.author = true
@@ -63,8 +66,7 @@ javadoc {
     options.addStringOption('Xdoclint:html,syntax', '-quiet')
     options.addMultilineStringsOption('tag').setValue(['apiNote:a:API Note:', 'implSpec:a:Implementation Requirements:', 'implNote:a:Implementation Note:'])
     options.encoding = 'UTF-8'
-    options.links('http://docs.oracle.com/javase/8/docs/api/',
-            'http://typesafehub.github.com/config/latest/api/',
+    options.links('http://docs.oracle.com/javase/9/docs/api/',
             'http://google.github.io/guava/releases/21.0/api/docs/')
 }
 
@@ -85,9 +87,6 @@ project.tasks.create('sourceJar', Jar) {
     extension 'jar'
     group 'build'
 }
-
-
-
 
 tasks.withType(Jar) {
     group 'Jars'
