--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 
 
 /*
+ *
  * Copyright 2018 softcake.org.
  *
  * Licensed under the Apache License, Version 2.0 (the "License").
@@ -15,6 +16,16 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+// Require Java 9 or higher
+
+int javaVersion = Integer.valueOf(JavaVersion.current().getMajorVersion())
+if (javaVersion < 9) {
+
+	throw new GradleException("The build requires Java 9 or higher. " +
+
+		"Currently executing with Java " + javaVersion + ".")
+
+}
 
 rootProject.name = "cucumber"
 
