--- a/cucumber.actors/build.gradle
+++ b/cucumber.actors/build.gradle
@@ -1,4 +1,5 @@
 /*
+ *
  * Copyright 2018 softcake.org.
  *
  * Licensed under the Apache License, Version 2.0 (the "License").
@@ -22,7 +23,7 @@ plugins {
 // end::plugins[]
 
 // tag::moduleName[]
-javaModule.name = 'org.softcake.cucumber.actors'  // <1>
+javaModule.name = 'org.softcake.cucumber.actors.api'  // <1>
 description = "The Actors"
 // end::moduleName[]
 
