--- a/gradle/compile.gradle
+++ b/gradle/compile.gradle
@@ -1,4 +1,5 @@
 /*
+ *
  * Copyright 2018 softcake.org.
  *
  * Licensed under the Apache License, Version 2.0 (the "License").
@@ -18,7 +19,7 @@ import org.gradle.api.tasks.wrapper.Wrapper.DistributionType
 task cleanRoot(type: Delete) {
     delete "$buildDir"
     followSymlinks = true
-    //mustRunAfter "clean"
+    group JavaBasePlugin.BUILD_TASK_NAME
 }
 
 task wrapper(type: Wrapper) {
