--- a/build.gradle
+++ b/build.gradle
@@ -39,12 +39,14 @@ buildscript {
 //        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.6.0"
         classpath "com.github.jengelman.gradle.plugins:shadow:2.0.2"
 //        classpath "de.schauderhaft.degraph:degraph-check:0.1.4"
-//        classpath "org.asciidoctor:asciidoctor-gradle-plugin:1.5.7"
-//        classpath "org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.16"
+        classpath "org.asciidoctor:asciidoctor-gradle-plugin:1.5.6"
+        classpath "org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.16"
 //        classpath "com.gradle:build-scan-plugin:1.11"
         classpath "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
         classpath "gradle.plugin.io.morethan.jmhreport:gradle-jmh-report:0.7.0"
-        classpath "gradle.plugin.org.gradle.guides:gradle-guides-plugin:0.11.3"
+//        classpath "gradle.plugin.org.gradle.guides:gradle-guides-plugin:0.11.3"
+        classpath 'com.selesse:gradle-git-changelog:0.2.+'
+
     }
 }
 
@@ -211,29 +213,29 @@ allprojects { subProject ->
 
     }
 }
-
-
-apply plugin: "org.gradle.guides.tutorial"
-
-
-
-
-guide {
-    repoPath = 'softcake/cucumber'
-    mainAuthor = 'Pepper Lebeck-Jobe'
-}
-
-asciidoctor {
-    inputs.dir files('src/cucumber.actors')
-    attributes originaldir: file('src/cucumber.actors')
-//    attributes singledir: file('src/1-single-module')
-//    attributes alldir: file('src/2-all-modules')
-//    attributes appdir: file('src/3-application')
-//    attributes plugindir: file('src/4-plugin')
-
-
-}
-
+//
+//
+//apply plugin: "org.gradle.guides.tutorial"
+//
+//
+//
+//
+//guide {
+//    repoPath = 'softcake/cucumber'
+//    mainAuthor = 'Pepper Lebeck-Jobe'
+//}
+//
+//asciidoctor {
+//    inputs.dir files('src/cucumber.actors')
+//    attributes originaldir: file('src/cucumber.actors')
+////    attributes singledir: file('src/1-single-module')
+////    attributes alldir: file('src/2-all-modules')
+////    attributes appdir: file('src/3-application')
+////    attributes plugindir: file('src/4-plugin')
+//
+//
+//}
+//
 
 
 
@@ -280,7 +282,7 @@ task aggregateJavadocs(type: Javadoc) {
 
     moduleNames = moduleNames.subSequence(0, moduleNames.length() - 1)
 
-    setDependsOn subprojects.collect { it.tasks.getByName("copyModules") }
+    setDependsOn publishedModules.collect { it.tasks.getByName("copyModules") }
     setSource file("$buildDir/docscr")
 
     maxMemory = "1024m"
@@ -304,4 +306,131 @@ task aggregateJavadocs(type: Javadoc) {
     options.links(
             'https://docs.oracle.com/javase/9/docs/api/'
     )
+}
+
+project(":documentation"){
+
+    apply plugin: 'org.asciidoctor.convert'
+
+    asciidoctorj {
+        version = '1.5.4'
+    }
+    asciidoctor {
+        sourceDir "content"
+        //outputDir { project.buildDir }
+        sources {
+            include 'index.adoc'
+        }
+        backends = ['html5', 'pdf']
+        inputs.dir files('src')
+        //noinspection GroovyAssignabilityCheck
+        attributes 'source-highlighter': 'highlightjs',
+                'highlightjs-theme': 'pojoaque',  //'solarized_light', 'monokai_sublime' railscasts, pojoaque, androidstudio
+                //'stylesheet': "$projectDir/src/docs/asciidoc/stylesheets/riak.css",
+                icons: 'font',
+                numbered: '',
+                idprefix: '',
+                'docinfo1': '',
+                sectanchors          : true,
+                sectlinks            : true,
+                linkattrs            : true,
+                encoding             : 'utf-8',
+                toc                  : 'left',
+                toclevels            : 2,
+                'toc-title'          : 'Contents',
+                //'testDir': project.sourceSets.test.java.srcDirs[0],
+                'projectName': rootProject.description,
+                imagesdir            : 'images',
+                stylesheet           : "stylesheets/riak.css"
+
+        attributes testDir: file("src/test/java")
+        attributes mainDir: file("src/main/java")
+
+
+    resources {
+        from rootProject.tasks.getByName('aggregateJavadocs') {
+            into 'api'
+        }
+    }
+
+
+
+    }
+}
+
+apply plugin: 'com.selesse.git.changelog'
+
+task gitChangelogTask(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask) {
+    file = new File("CHANGELOG.md");
+    templateContent = file('changelog.mustache').getText('UTF-8');
+}
+
+changelog {
+    // The title appears at the top of the changelog.
+    // Default value: the name of the project.
+    title = ""
+
+    // The output directory where the report is generated.
+    // Default value: main resource directory, or the "build" directory
+    outputDirectory = file("$projectDir/documentation/content")
+
+    // The name of the report to generate.
+    // Default value: CHANGELOG.md
+    fileName = "changelog.txt"
+
+    // The range of commits the changelog should be composed of.
+    // Default value: 'beginning' (i.e. full changelog)
+    // Possible values: 'beginning', 'last_tag', 'xxx'
+    //
+    // 'last_tag' will use all the commits since the last tag,
+    // 'beginning' will use all commits since the initial commit (default)
+    // 'xxx' will use all the tags since the 'xxx' Git reference (i.e. `since = 1.2.0` will display the changelog
+    //       since the 1.2.0 tag, excluding 1.2.0)
+   // since = 'last_tag'
+
+    // The output formats that should be generated.
+    // Default value: ['markdown']
+    // Possible values: 'html', 'markdown'.
+//    formats = ['html', 'markdown']
+
+
+    // The Git "pretty" changelog commit format.
+    // Default value: %ad%x09%s (%an), which produces:
+    // Thu May 7 20:10:33 2015 -0400	Initial commit (Alex Selesse)
+//    commitFormat = '%s (%an)'
+
+    // Specifies a commit format for Markdown.
+    // Default value: '* %s (%an)', which produces:
+    // * Initial commit (Alex Selesse)
+//    markdown {
+//        commitFormat = '* %s (%an)'
+//    }
+
+    // Specifies a commit format for the HTML template.
+    // Default value: see commitFormat
+//    html {
+//        commitFormat = '%s (%an)'
+//
+//        // The Groovy HTML template used to generate the HTML changelog.
+//        // See http://docs.groovy-lang.org/latest/html/documentation/template-engines.html
+//        template = file("$projectDir/htmlTemplate").text
+//    }
+
+    // A closure that returns 'true' if the line should be included in the changelog.
+    // Default value: accept everything, { true }
+//    includeLines = {
+//        !it.contains("Merge")
+//    }
+
+    // A closure that transforms a changelog String.
+    // Default value: the identity closure, { it }
+    //
+    // For example, to remove '[ci skip]' from the changelog messages:
+//    processLines = {
+//        String input = it as String
+//        if (input.contains('[ci skip] ')) {
+//            input = input.minus('[ci skip] ')
+//        }
+//        input
+//    }
 }
