--- a/gradle/compile.gradle
+++ b/gradle/compile.gradle
@@ -25,7 +25,7 @@ task cleanRoot(type: Delete) {
 task wrapper(type: Wrapper) {
     description = 'Generates gradlew[.bat] scripts'
     distributionType = DistributionType.BIN
-    gradleVersion = '4.6-rc-2'
+    gradleVersion = '4.6'
 
 }
 
