--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,8 @@ buildscript {
         classpath "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
         classpath "gradle.plugin.io.morethan.jmhreport:gradle-jmh-report:0.7.0"
 //        classpath "gradle.plugin.org.gradle.guides:gradle-guides-plugin:0.11.3"
-        classpath 'com.selesse:gradle-git-changelog:0.2.+'
+        //classpath 'com.selesse:gradle-git-changelog:0.2.+'
+        classpath "gradle.plugin.se.bjurr.gitchangelog:git-changelog-gradle-plugin:1.55"
 
     }
 }
@@ -243,28 +244,11 @@ allprojects { subProject ->
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 evaluationDependsOnChildren()
 task aggregateJavadocs(type: Javadoc) {
 
     group JavaBasePlugin.DOCUMENTATION_GROUP
+
     description = "Generates aggregated Javadocs"
     title = Character.toUpperCase(project.name.charAt(0)).toString() + project.name.substring(1) + " ${version} API"
     def moduleNames = ""
@@ -316,6 +300,7 @@ project(":documentation"){
         version = '1.5.4'
     }
     asciidoctor {
+        dependsOn tasks.getByName("gitChangelogTask")
         sourceDir "content"
         //outputDir { project.buildDir }
         sources {
@@ -345,7 +330,7 @@ project(":documentation"){
 
         attributes testDir: file("src/test/java")
         attributes mainDir: file("src/main/java")
-
+        attributes changelogDir: file("build/changelog")
 
     resources {
         from rootProject.tasks.getByName('aggregateJavadocs') {
@@ -353,84 +338,6 @@ project(":documentation"){
         }
     }
 
-
-
     }
 }
 
-apply plugin: 'com.selesse.git.changelog'
-
-task gitChangelogTask(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask) {
-    file = new File("CHANGELOG.md");
-    templateContent = file('changelog.mustache').getText('UTF-8');
-}
-
-changelog {
-    // The title appears at the top of the changelog.
-    // Default value: the name of the project.
-    title = ""
-
-    // The output directory where the report is generated.
-    // Default value: main resource directory, or the "build" directory
-    outputDirectory = file("$projectDir/documentation/content")
-
-    // The name of the report to generate.
-    // Default value: CHANGELOG.md
-    fileName = "changelog.txt"
-
-    // The range of commits the changelog should be composed of.
-    // Default value: 'beginning' (i.e. full changelog)
-    // Possible values: 'beginning', 'last_tag', 'xxx'
-    //
-    // 'last_tag' will use all the commits since the last tag,
-    // 'beginning' will use all commits since the initial commit (default)
-    // 'xxx' will use all the tags since the 'xxx' Git reference (i.e. `since = 1.2.0` will display the changelog
-    //       since the 1.2.0 tag, excluding 1.2.0)
-   // since = 'last_tag'
-
-    // The output formats that should be generated.
-    // Default value: ['markdown']
-    // Possible values: 'html', 'markdown'.
-//    formats = ['html', 'markdown']
-
-
-    // The Git "pretty" changelog commit format.
-    // Default value: %ad%x09%s (%an), which produces:
-    // Thu May 7 20:10:33 2015 -0400	Initial commit (Alex Selesse)
-//    commitFormat = '%s (%an)'
-
-    // Specifies a commit format for Markdown.
-    // Default value: '* %s (%an)', which produces:
-    // * Initial commit (Alex Selesse)
-//    markdown {
-//        commitFormat = '* %s (%an)'
-//    }
-
-    // Specifies a commit format for the HTML template.
-    // Default value: see commitFormat
-//    html {
-//        commitFormat = '%s (%an)'
-//
-//        // The Groovy HTML template used to generate the HTML changelog.
-//        // See http://docs.groovy-lang.org/latest/html/documentation/template-engines.html
-//        template = file("$projectDir/htmlTemplate").text
-//    }
-
-    // A closure that returns 'true' if the line should be included in the changelog.
-    // Default value: accept everything, { true }
-//    includeLines = {
-//        !it.contains("Merge")
-//    }
-
-    // A closure that transforms a changelog String.
-    // Default value: the identity closure, { it }
-    //
-    // For example, to remove '[ci skip]' from the changelog messages:
-//    processLines = {
-//        String input = it as String
-//        if (input.contains('[ci skip] ')) {
-//            input = input.minus('[ci skip] ')
-//        }
-//        input
-//    }
-}
