--- a/documentation/build.gradle
+++ b/documentation/build.gradle
@@ -42,5 +42,16 @@ javaModule.name = 'org.softcake.documentation'
         implementation "com.google.guava:guava"
     }
 
+apply plugin: "se.bjurr.gitchangelog.git-changelog-gradle-plugin"
+
+task gitChangelogTask(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask) {
+
+    file = new File("$buildDir/changelog/changelog.md");
+    templateContent = file("$rootDir/documentation/content/templates/changelog.mustache").getText('UTF-8');
+    toRef = "refs/heads/master"
+    dateFormat = "MM/dd/yyyy";
+    timeZone = "UTC"
+    untaggedName = 'Next release'
+}
 
 
