--- a/gradle/integrationTest.gradle
+++ b/gradle/integrationTest.gradle
@@ -50,8 +50,12 @@ task integrationTest(type: Test) {
     mustRunAfter test
 
     reports {
-        junitXml.enabled = false
+        junitXml.enabled = true
         html.enabled = false
+
+
+
+
     }
 
     if (project.plugins.hasPlugin(JacocoPlugin)) {
