--- a/build.gradle
+++ b/build.gradle
@@ -155,9 +155,9 @@ subprojects { subProject ->
     if (subProject in documentationModule) {
         apply plugin: "com.zyxist.chainsaw"
         apply plugin: "org.junit.platform.gradle.plugin"
-        apply from: file("$rootDir/gradle/publishing.gradle")
-        apply from: "$rootDir/gradle/code-quality.gradle"
-        apply from: file("$rootDir/gradle/coverage.gradle")
+        //apply from: file("$rootDir/gradle/publishing.gradle")
+        //apply from: "$rootDir/gradle/code-quality.gradle"
+        //apply from: file("$rootDir/gradle/coverage.gradle")
         // common dependencies
         dependencies {
             // JUnit Jupiter API and TestEngine implementation
@@ -230,11 +230,14 @@ allprojects { subProject ->
         }
 
         junitPlatformTest {
+            if (project.plugins.hasPlugin(JacocoPlugin)) {
 
-            jacoco {
-                append = false
-                destinationFile = file("$buildDir/jacoco/test.exec")
+                jacoco {
+                    append = false
+                    destinationFile = file("$buildDir/jacoco/test.exec")
+                }
             }
+
         }
     }
 }
