--- a/documentation/build.gradle
+++ b/documentation/build.gradle
@@ -39,7 +39,7 @@ task gitChangelogTask(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask
 
     file = new File("$buildDir/changelog/changelog.md");
     templateContent = file("$rootDir/documentation/content/templates/changelog.mustache").getText('UTF-8')
-    //toRef = "refs/heads/master"
+    toRef = "refs/heads/HEAD"
     dateFormat = "MM/dd/yyyy";
     timeZone = "UTC"
     untaggedName = 'Next release'
