--- a/gradle/compile.gradle
+++ b/gradle/compile.gradle
@@ -48,11 +48,54 @@ allprojects { subProject ->
 
             }
 
-            evaluatedProject.withType(Test) { task ->
-                task.testLogging.exceptionFormat = 'full'
+//            evaluatedProject.withType(Test) { task ->
+//                task.testLogging.exceptionFormat = 'full'
+//
+//            }
+            subProject.afterEvaluate {
+                javadoc {
+                    inputs.property("moduleName", javaModule.name)
 
+                    doFirst {
+
+                        options.addStringOption('-module-path', classpath.asPath)
+
+                    }
+
+                    afterEvaluate {
+                        options.header = "${project.description} of ${rootProject.description}."
+                    }
+                    options.memberLevel = JavadocMemberLevel.PROTECTED
+                    options.author = true
+                    options.header = project.name
+                    options.addStringOption('Xdoclint:html,syntax', '-quiet')
+                    options.addMultilineStringsOption('tag').setValue(['apiNote:a:API Note:', 'implSpec:a:Implementation Requirements:', 'implNote:a:Implementation Note:'])
+                    options.encoding = 'UTF-8'
+                    options.links('http://docs.oracle.com/javase/9/docs/api/',
+                            'http://google.github.io/guava/releases/21.0/api/docs/')
+                }
             }
 
+            test {
+                useJUnitPlatform {
+                }
+
+                reports {
+                    junitXml.enabled = true
+                    junitXml.destination(file('build/test-results/folder'))
+                }
+            }
+
+            junitPlatformTest {
+                if (project.plugins.hasPlugin(JacocoPlugin)) {
+
+                    jacoco {
+                        append = false
+                        destinationFile = file("$buildDir/jacoco/test.exec")
+                    }
+                }
+
+            }
 
         }
         // See: https://docs.oracle.com/javase/9/tools/javac.htm#JSWOR627
@@ -108,3 +151,53 @@ allprojects { subProject ->
         }
     }
 }
+//
+//allprojects { subProject ->
+//
+//    if (subProject.plugins.hasPlugin(JavaPlugin)) {
+//        subProject.afterEvaluate {
+//            javadoc {
+//                inputs.property("moduleName", javaModule.name)
+//
+//                doFirst {
+//
+//                    options.addStringOption('-module-path', classpath.asPath)
+//
+//                }
+//
+//                afterEvaluate {
+//                    options.header = "${project.description} of ${rootProject.description}."
+//                }
+//                options.memberLevel = JavadocMemberLevel.PROTECTED
+//                options.author = true
+//                options.header = project.name
+//                options.addStringOption('Xdoclint:html,syntax', '-quiet')
+//                options.addMultilineStringsOption('tag').setValue(['apiNote:a:API Note:', 'implSpec:a:Implementation Requirements:', 'implNote:a:Implementation Note:'])
+//                options.encoding = 'UTF-8'
+//                options.links('http://docs.oracle.com/javase/9/docs/api/',
+//                        'http://google.github.io/guava/releases/21.0/api/docs/')
+//            }
+//        }
+//
+//        test {
+//            useJUnitPlatform {
+//            }
+//
+//            reports {
+//                junitXml.enabled = true
+//                junitXml.destination(file('build/test-results/folder'))
+//            }
+//        }
+//
+//        junitPlatformTest {
+//            if (project.plugins.hasPlugin(JacocoPlugin)) {
+//
+//                jacoco {
+//                    append = false
+//                    destinationFile = file("$buildDir/jacoco/test.exec")
+//                }
+//            }
+//
+//        }
+//    }
+//}
