fix(ghpages): ref master not found

--- a/cucumber.actors/build.gradle
+++ b/cucumber.actors/build.gradle
@@ -23,7 +23,7 @@ plugins {
 // end::plugins[]
 
 // tag::moduleName[]
-javaModule.name = 'org.softcake.cucumber.actors.api'  // <1>
+javaModule.name = 'org.softcake.cucumber.actors'  // <1>
 description = "The Actors"
 // end::moduleName[]
 
