--- a/build.gradle
+++ b/build.gradle
@@ -29,24 +29,19 @@ buildscript {
         classpath "com.netflix.nebula:nebula-project-plugin:3.4.1"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.2"
         classpath "ru.vyarus:gradle-pom-plugin:1.2.0"
-        classpath "net.nemerosa:versioning:2.0.0"
+        classpath "net.nemerosa:versioning:2.6.1"
         classpath "ru.vyarus:gradle-github-info-plugin:1.1.0"
         classpath "io.spring.gradle:dependency-management-plugin:1.0.4.RELEASE"
         classpath "gradle.plugin.de.gliderpilot.gradle.semantic-release:gradle-semantic-release-plugin:1.4.0"
         classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0"
         classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.6.2"
-        classpath "me.champeau.gradle:jmh-gradle-plugin:0.4.5"
-//        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.6.0"
-        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.2"
-//        classpath "de.schauderhaft.degraph:degraph-check:0.1.4"
-        classpath "org.asciidoctor:asciidoctor-gradle-plugin:1.5.6"
+        classpath "org.asciidoctor:asciidoctor-gradle-plugin:1.5.7"
         classpath "org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.16"
 //        classpath "com.gradle:build-scan-plugin:1.11"
-        classpath "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
+        classpath "org.codehaus.groovy.modules.http-builder:http-builder:0.7.2"
         classpath "gradle.plugin.io.morethan.jmhreport:gradle-jmh-report:0.7.0"
-//        classpath "gradle.plugin.org.gradle.guides:gradle-guides-plugin:0.11.3"
-        //classpath 'com.selesse:gradle-git-changelog:0.2.+'
         classpath "gradle.plugin.se.bjurr.gitchangelog:git-changelog-gradle-plugin:1.55"
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.17.0"
 
     }
 }
@@ -77,7 +72,7 @@ ext {
     junitVintageVersion = "5.1.0"
     junitPlatformVersion = "1.1.0"
     junitJupiterVersion = "5.1.0"
-    log4jVersion = "2.9.0"
+    log4jVersion = "2.10.0"
 }
 
 ext {
@@ -106,6 +101,8 @@ apply plugin: "idea"
 
 apply plugin: "net.nemerosa.versioning"
 apply plugin: "de.gliderpilot.semantic-release"
+apply plugin: "com.github.ben-manes.versions"
+
 apply from: file("gradle/credentials.gradle")
 apply from: file("gradle/compile.gradle")
 apply from: file("gradle/properties.gradle")
@@ -114,6 +111,7 @@ apply from: file("gradle/sonarqube.gradle")
 
 allprojects {
     apply plugin: "io.spring.dependency-management"
+
 
     dependencyManagement {
         dependencies {
@@ -125,15 +123,15 @@ allprojects {
         }
     }
 
+
 }
 
-
+apply from: file("$rootDir/gradle/publishing.gradle")
 subprojects { subProject ->
 
     if (subProject in publishedModules) {
-        apply plugin: "com.zyxist.chainsaw"
-        apply plugin: "org.junit.platform.gradle.plugin"
-        apply from: file("$rootDir/gradle/publishing.gradle")
+
+
         apply from: "$rootDir/gradle/bintray.gradle"
         apply from: "$rootDir/gradle/artifactory.gradle"
         apply from: "$rootDir/gradle/code-quality.gradle"
@@ -151,13 +149,16 @@ subprojects { subProject ->
             implementation "com.google.guava:guava"
         }
 
+    }else {
+
+        jar.enabled = false
+        javadoc.enabled = false
+        uploadArchives.enabled = false
+
     }
+
     if (subProject in documentationModule) {
-        apply plugin: "com.zyxist.chainsaw"
-        apply plugin: "org.junit.platform.gradle.plugin"
-        //apply from: file("$rootDir/gradle/publishing.gradle")
-        //apply from: "$rootDir/gradle/code-quality.gradle"
-        //apply from: file("$rootDir/gradle/coverage.gradle")
+
         // common dependencies
         dependencies {
             // JUnit Jupiter API and TestEngine implementation
@@ -170,7 +171,10 @@ subprojects { subProject ->
 
             implementation "com.google.guava:guava"
         }
-
+        jar.enabled = false
+        javadoc.enabled = false
+        uploadArchives.enabled = false
+        junitPlatformTest.enabled = false
     }
 
     if (subProject in sonarQubeModules) {
@@ -215,56 +219,6 @@ semanticRelease {
     }
 }
 
-
-allprojects { subProject ->
-
-    if (subProject.plugins.hasPlugin(JavaPlugin)) {
-        subProject.afterEvaluate {
-            javadoc {
-                inputs.property("moduleName", javaModule.name)
-
-                doFirst {
-
-                    options.addStringOption('-module-path', classpath.asPath)
-
-                }
-
-                afterEvaluate {
-                    options.header = "${project.description} of ${rootProject.description}."
-                }
-                options.memberLevel = JavadocMemberLevel.PROTECTED
-                options.author = true
-                options.header = project.name
-                options.addStringOption('Xdoclint:html,syntax', '-quiet')
-                options.addMultilineStringsOption('tag').setValue(['apiNote:a:API Note:', 'implSpec:a:Implementation Requirements:', 'implNote:a:Implementation Note:'])
-                options.encoding = 'UTF-8'
-                options.links('http://docs.oracle.com/javase/9/docs/api/',
-                        'http://google.github.io/guava/releases/21.0/api/docs/')
-            }
-        }
-
-        test {
-            useJUnitPlatform {
-            }
-
-            reports {
-                junitXml.enabled = true
-                junitXml.destination(file('build/test-results/folder'))
-            }
-        }
-
-        junitPlatformTest {
-            if (project.plugins.hasPlugin(JacocoPlugin)) {
-
-                jacoco {
-                    append = false
-                    destinationFile = file("$buildDir/jacoco/test.exec")
-                }
-            }
-
-        }
-    }
-}
 
 evaluationDependsOnChildren()
 task aggregateJavadocs(type: Javadoc) {
@@ -314,52 +268,5 @@ task aggregateJavadocs(type: Javadoc) {
     )
 }
 
-project(":documentation") {
-
-    apply plugin: 'org.asciidoctor.convert'
-
-    asciidoctorj {
-        version = '1.5.4'
-    }
-    asciidoctor {
-        dependsOn tasks.getByName("gitChangelogTask")
-        sourceDir "content"
-        //outputDir { project.buildDir }
-        sources {
-            include 'index.adoc'
-        }
-        backends = ['html5', 'pdf']
-        inputs.dir files('src')
-
-        //noinspection GroovyAssignabilityCheck
-        attributes 'source-highlighter': 'highlightjs',
-                'highlightjs-theme': 'pojoaque',  //'solarized_light', 'monokai_sublime' railscasts, pojoaque, androidstudio
-                icons: 'font',
-                numbered: '',
-                idprefix: '',
-                'docinfo1': '',
-                sectanchors: true,
-                sectlinks: true,
-                linkattrs: true,
-                encoding: 'utf-8',
-                toc: 'left',
-                toclevels: 2,
-                'toc-title': 'Contents',
-                'projectName': rootProject.description,
-                imagesdir: 'images',
-                stylesheet: "stylesheets/riak.css"
-
-        attributes testDir: file("src/test/java")
-        attributes mainDir: file("src/main/java")
-        attributes changelogDir: file("build/changelog")
-
-        resources {
-            from rootProject.tasks.getByName('aggregateJavadocs') {
-                into 'api'
-            }
-        }
-
-    }
-}
 
 apply from: file('gradle/ghPages.gradle')
