build(publish): enable publish bintray

--- a/gradle/bintray.gradle
+++ b/gradle/bintray.gradle
@@ -73,7 +73,7 @@ allprojects { subProject ->
                     }
 
                     mavenCentralSync {
-                        sync = true
+                        sync = false
                         def ossUser = project.sonatypeOssUsername
                         def ossPass = project.sonatypeOssPassword
                         user = ossUser
