--- a/build.gradle
+++ b/build.gradle
@@ -91,8 +91,8 @@ ext {
 
     documentationModule = project(":documentation")
 
-    publishArtifacts = false
-    checkCodeQuality = true
+    publishArtifacts = true
+    checkCodeQuality = false
     ignoreFailures = true
 }
 
